// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicationsListPaging renders  component renders as empty due to currentpage set outside range 1`] = `
<span
  className="publicationsListControls empty"
/>
`;

exports[`PublicationsListPaging renders  component with ellipsis paging results 1`] = `
<div>
  <WithStyles(Grid)
    container={true}
    spacing={0}
  >
    <WithStyles(Grid)
      item={true}
    >
      <WithStyles(Button)
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "paddingLeft": 4,
          }
        }
        variant="flat"
      >
        <pure(ChevronLeftIcon) />
        Previous
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "flexGrow": 1,
        }
      }
    />
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(Button)
          aria-label="Click to select page 1 of 50 result pages"
          className=""
          color="default"
          disabled={false}
          key="1"
          onClick={[Function]}
          size="small"
          variant="flat"
        >
          1
        </WithStyles(Button)>
        ...
        <WithStyles(Button)
          aria-label="Click to select page 7 of 50 result pages"
          className=""
          color="default"
          disabled={false}
          key="7"
          onClick={[Function]}
          size="small"
          variant="flat"
        >
          7
        </WithStyles(Button)>
        <WithStyles(Button)
          aria-label="Click to select page 8 of 50 result pages"
          className=""
          color="default"
          disabled={false}
          key="8"
          onClick={[Function]}
          size="small"
          variant="flat"
        >
          8
        </WithStyles(Button)>
        <WithStyles(Button)
          aria-label="Click to select page 9 of 50 result pages"
          className=""
          color="default"
          disabled={false}
          key="9"
          onClick={[Function]}
          size="small"
          variant="flat"
        >
          9
        </WithStyles(Button)>
        <WithStyles(Button)
          aria-label="Click to select page 10 of 50 result pages"
          className=""
          color="primary"
          disabled={true}
          key="10"
          onClick={[Function]}
          size="small"
          variant="flat"
        >
          10
        </WithStyles(Button)>
        <WithStyles(Button)
          aria-label="Click to select page 11 of 50 result pages"
          className=""
          color="default"
          disabled={false}
          key="11"
          onClick={[Function]}
          size="small"
          variant="flat"
        >
          11
        </WithStyles(Button)>
        <WithStyles(Button)
          aria-label="Click to select page 12 of 50 result pages"
          className=""
          color="default"
          disabled={false}
          key="12"
          onClick={[Function]}
          size="small"
          variant="flat"
        >
          12
        </WithStyles(Button)>
        <WithStyles(Button)
          aria-label="Click to select page 13 of 50 result pages"
          className=""
          color="default"
          disabled={false}
          key="13"
          onClick={[Function]}
          size="small"
          variant="flat"
        >
          13
        </WithStyles(Button)>
        ...
        <WithStyles(Button)
          aria-label="Click to select page 50 of 50 result pages"
          className=""
          color="default"
          disabled={false}
          key="50"
          onClick={[Function]}
          size="small"
          variant="flat"
        >
          50
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </Hidden>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={true}
      xlDown={false}
      xlUp={false}
      xsDown={false}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <WithStyles(Button)
          style={
            Object {
              "margin": "0 auto",
            }
          }
          variant="flat"
        >
          Page 10 of 50
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </Hidden>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "flexGrow": 1,
        }
      }
    />
    <WithStyles(Grid)
      item={true}
    >
      <WithStyles(Button)
        disabled={false}
        onClick={[Function]}
        size="small"
        variant="flat"
      >
        Next
        <pure(ChevronRightIcon) />
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`PublicationsListPaging renders  component with empty paging data 1`] = `
<span
  className="publicationsListControls empty"
/>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, first page 1`] = `
<div>
  <WithStyles(Grid)
    container={true}
    spacing={0}
  >
    <WithStyles(Grid)
      item={true}
    >
      <WithStyles(Button)
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "paddingLeft": 4,
          }
        }
        variant="flat"
      >
        <pure(ChevronLeftIcon) />
        Previous
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "flexGrow": 1,
        }
      }
    />
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(Button)
          aria-label="Click to select page 1 of 3 result pages"
          className=""
          color="primary"
          disabled={true}
          key="1"
          onClick={[Function]}
          size="small"
          variant="flat"
        >
          1
        </WithStyles(Button)>
        <WithStyles(Button)
          aria-label="Click to select page 2 of 3 result pages"
          className=""
          color="default"
          disabled={false}
          key="2"
          onClick={[Function]}
          size="small"
          variant="flat"
        >
          2
        </WithStyles(Button)>
        <WithStyles(Button)
          aria-label="Click to select page 3 of 3 result pages"
          className=""
          color="default"
          disabled={false}
          key="3"
          onClick={[Function]}
          size="small"
          variant="flat"
        >
          3
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </Hidden>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={true}
      xlDown={false}
      xlUp={false}
      xsDown={false}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <WithStyles(Button)
          style={
            Object {
              "margin": "0 auto",
            }
          }
          variant="flat"
        >
          Page 1 of 3
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </Hidden>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "flexGrow": 1,
        }
      }
    />
    <WithStyles(Grid)
      item={true}
    >
      <WithStyles(Button)
        disabled={false}
        onClick={[Function]}
        size="small"
        variant="flat"
      >
        Next
        <pure(ChevronRightIcon) />
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, last page 1`] = `
<div>
  <WithStyles(Grid)
    container={true}
    spacing={0}
  >
    <WithStyles(Grid)
      item={true}
    >
      <WithStyles(Button)
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "paddingLeft": 4,
          }
        }
        variant="flat"
      >
        <pure(ChevronLeftIcon) />
        Previous
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "flexGrow": 1,
        }
      }
    />
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(Button)
          aria-label="Click to select page 1 of 3 result pages"
          className=""
          color="default"
          disabled={false}
          key="1"
          onClick={[Function]}
          size="small"
          variant="flat"
        >
          1
        </WithStyles(Button)>
        <WithStyles(Button)
          aria-label="Click to select page 2 of 3 result pages"
          className=""
          color="default"
          disabled={false}
          key="2"
          onClick={[Function]}
          size="small"
          variant="flat"
        >
          2
        </WithStyles(Button)>
        <WithStyles(Button)
          aria-label="Click to select page 3 of 3 result pages"
          className=""
          color="primary"
          disabled={true}
          key="3"
          onClick={[Function]}
          size="small"
          variant="flat"
        >
          3
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </Hidden>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={true}
      xlDown={false}
      xlUp={false}
      xsDown={false}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <WithStyles(Button)
          style={
            Object {
              "margin": "0 auto",
            }
          }
          variant="flat"
        >
          Page 3 of 3
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </Hidden>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "flexGrow": 1,
        }
      }
    />
    <WithStyles(Grid)
      item={true}
    >
      <WithStyles(Button)
        disabled={true}
        onClick={[Function]}
        size="small"
        variant="flat"
      >
        Next
        <pure(ChevronRightIcon) />
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, second page 1`] = `
<div>
  <WithStyles(Grid)
    container={true}
    spacing={0}
  >
    <WithStyles(Grid)
      item={true}
    >
      <WithStyles(Button)
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "paddingLeft": 4,
          }
        }
        variant="flat"
      >
        <pure(ChevronLeftIcon) />
        Previous
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "flexGrow": 1,
        }
      }
    />
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(Button)
          aria-label="Click to select page 1 of 3 result pages"
          className=""
          color="default"
          disabled={false}
          key="1"
          onClick={[Function]}
          size="small"
          variant="flat"
        >
          1
        </WithStyles(Button)>
        <WithStyles(Button)
          aria-label="Click to select page 2 of 3 result pages"
          className=""
          color="primary"
          disabled={true}
          key="2"
          onClick={[Function]}
          size="small"
          variant="flat"
        >
          2
        </WithStyles(Button)>
        <WithStyles(Button)
          aria-label="Click to select page 3 of 3 result pages"
          className=""
          color="default"
          disabled={false}
          key="3"
          onClick={[Function]}
          size="small"
          variant="flat"
        >
          3
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </Hidden>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={true}
      xlDown={false}
      xlUp={false}
      xsDown={false}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <WithStyles(Button)
          style={
            Object {
              "margin": "0 auto",
            }
          }
          variant="flat"
        >
          Page 2 of 3
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </Hidden>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "flexGrow": 1,
        }
      }
    />
    <WithStyles(Grid)
      item={true}
    >
      <WithStyles(Button)
        disabled={false}
        onClick={[Function]}
        size="small"
        variant="flat"
      >
        Next
        <pure(ChevronRightIcon) />
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;
